--- a/Phylogenetics/4.2.1b_tree_building.md
+++ b/Phylogenetics/4.2.1b_tree_building.md
@@ -10,7 +10,7 @@
 	+ [4.2.1b.5: Tree visualisation](#4.2.1.5-tree-visualisation)
 	+ [4.2.1b.6: Extracting metadata](#4.2.1.6-extracting-metadata)
 	+ [4.2.1b.7: Annotating the tree](#4.2.1.7-annotating-the-tree)
-	+ [4.2.1b.8: Additional activity: Extracting alternate metadata](#4.2.1.8-additional-activity-extracting-alternate-metadata)
+	+ [4.2.1b.8: Trees in R]
 
 
 # 4.2.1b: Tree building
@@ -52,7 +52,7 @@ ___
 ### Task 3
 How many sequences does this fasta file contain?
 
-Hint: You can use `grep` to search the file, and search for the `>` character, of which each will denote a sequence.
+Hint: You can use `grep` to search the file, and search for the `>` character, of which each will denote a sequence, and `wc -l` to count lines.
 
 ## 4.2.1b.3: Model selection
 
@@ -94,7 +94,7 @@ ___
 ### Task 5
 In the terminal, type `iqtree -s omicron_subset_countries_aligned.fasta -m TESTONLY` 
 
-What is the best fitting model? Make a note of this!
+What is the best fitting model according to corrected akaike information criteria? Make a note of this!
 
 Hint: This will be on the terminal screen, you may have to scroll up a little to under where each model was tested.
 
@@ -124,7 +124,7 @@ If you write `ls`, you'll notice a lot of new files appear in your directory. Th
 
 Now you've built a tree, it's time to visualise it. We'll be using FigTree. FigTree is designed as a graphical viewer of phylogenetic trees and as a program for producing publication-ready figures. It can be downloaded from: http://tree.bio.ed.ac.uk/software/figtree/ 
 
-You'll need to have figtree installed on your own laptop for this part of the practical. As we can't transfer files to your own laptop from the VM, you won't be able to use the `.contree` file you just made. Instead, you'll need to download the one I made earlier from the GitHub page. 
+You'll need to have figtree installed on your own laptop for this part of the practical. First, download the tree you just created from the VM to your laptop.
 
 ___
 
@@ -158,7 +158,7 @@ ___
 
 It often isn't useful to see ALL the bootstrap values - we just want to know which branches have strong support and which don't. Therefore, we can hide the lower values and only show values of interest. 
 
-To do this, click `ctrl+f`. A search bar will open at the top of the figure. Search for bootstrap values of at least 90. Click `Node` in selection mode, then click the `annotate` paperclip. This will bring up a box. Select `bootstrap` from the drop down list, leave the second box blank, and apply. 
+To do this, click `ctrl+f`. A search bar will open at the top of the figure. Search for bootstrap values less than 90. Click `Node` in selection mode, then click the `annotate` paperclip. This will bring up a box. Select `bootstrap` from the drop down list, leave the second box blank, and apply. 
 
 This will remove any bootstrap values less than 90. 
 
@@ -197,7 +197,7 @@ ___
 
 ### Task 15
 
-You'll need to import your fasta file. This first involves knowing where it is. You can find this out using the command `file.choose()`. This will open a window where you can navigate your directories and select your alignment file. The full path to this will appear in the console in R studio. 
+You'll need to import the `omicron_subset_countries_aligned.fasta` file you created. This first involves knowing where it is. You can find this out using the command `file.choose()`. This will open a window where you can navigate your directories and select the file in `Phylogenetics_analysis`. The full path to this will appear in the console in R studio. 
 
 To import and store your alignment in R, run:
 `alignment<-seqinr::read.alignment("PATH_TO_FILE", format = "fasta")` replacing the PATH_TO_FILE with the path you generated in the last step. 
@@ -211,7 +211,7 @@ We're now going to create a table listing the country for each sequence. First, 
 
 `m<-data.frame(ID = alignment$nam, country = NA)` 
 
-This table should now have appeared under the alignment in your environment tab! 
+This table should now have appeared under the alignment in your environment tab! Click on it to take a look.
 
 ___
 
@@ -233,19 +233,21 @@ We now want to save this table in a form that can be used by FigTree to annotate
 
 Replacing the PATH_TO_DIRECTORY with the full file path to your analysis directory (one step up from the file path we generated last time!).
 
-If we check in our directory, we should now see the `.txt` file!
+If we check in our directory in the `Files` tab in the bottom right window in R, we should now see the `.txt` file! Check the box next to it, click the `More` tab along the top of the window, and select `export` to download to your computer.
 
 ___
 
 ## 4.2.1b.7: Annotating the tree
 
-If we go back to our FigTree tree, we can now annotate it with the metadata file we just created! Again, we can't transfer the data from the VM to our own laptops, so we'll have to download the `.txt` file I made earlier from GitHub.
+If we go back to our FigTree tree, we can now annotate it with the metadata file we just created! 
 
 ___
 
 ### Task 19
 
-Once you've downloaded the file from GitHub, import it to FigTree. We do this by going to File->Import annotations and selecting the txt file we just made. 
+Check your annotations file by opening it in excel. If it all looks right, click save.
+
+Import the annotations file in to FigTree. We do this by going to File->Import annotations and selecting the txt file we just made. 
 
 We can now colour our tips by country! In the side tab, go to Tip labels and colour by country.
 
@@ -265,10 +267,7 @@ Again, play around until you have a tree you're happy with.
 
 When you've finalised your tree, you can export it by File->Export X where X is the file type. 
 
-Alternatively, you can try to annotate by different metadata!
-
-
-## 4.2.1b.7: Additional activity: Extracting alternate metadata
+___
 
 Go back to RStudio and try to extract some other useful metadata!
 
@@ -282,7 +281,7 @@ ___
 
 Create and save a file for annotating by year in FigTree. 
 
-Annotate your tree in FigTree with tips coloured by year (you'll have to download the file from GitHub.)
+Annotate your tree in FigTree with tips coloured by year.
 
 ___
 
@@ -306,11 +305,117 @@ ___
 
 Create and save a file for annotating your tree in FigTree with tips colourd by PHL/Other
 
-Annotate your tree in FigTree with tips coloured by PHL/Other (you'll have to download the file from GitHub.)
-
+Annotate your tree in FigTree with tips coloured by PHL/Other 
 ___
 
 Code for year colouring: 
 
 `m<-data.frame(ID = alignment$nam, year = NA)`
 `m$year<-sapply(strsplit(m$ID, "/"), "[", 3)`
+
+## 4.2.1b.8: Trees in R
+
+We can also visualise trees using R! This means we code and create all our figures in one file, and keep colour schemes consistent across them all. It also can be really useful for automation, as we'll see later!
+
+We'll build upon the script you've just written.
+
+This should currently read something like:
+
+```
+alignment<-seqinr::read.alignment("/home/user1/Phylogenetic_analysis/omicron_subset_countries.fasta", format = "fasta")
+
+m<-data.frame(ID = alignment$nam, country = NA)
+
+m$country<-sapply(strsplit(m$ID, "/"), "[", 1)
+
+m$country[which(m$country != "Philippines")]<-"Other"
+write.table(m, file = "/home/user1/Phylogenetic_analysis/omicron_subset_countries_PHLOther.txt", sep = "\t", row.names = FALSE)
+```
+
+___
+
+### Task 24
+We now need to import our tree into R
+
+Add in R this code: `tree<-ape::read.tree("PATH_TO_TREE")`, replacing `PATH_TO_TREE` with the filepath to the `.contree` file you created. 
+
+You should now see this appear in your environment tab.
+
+___
+
+We now want to plot our tree. We can do this using a package called `ggtree`
+
+___
+
+### Task 24
+
+Call on the ggtree library by running `library(ggtree)`
+
+Run the following code:
+```
+plot_tree<-ggtree::ggtree(tree, colour = "grey50", ladderize = T, size = 1) +
+  ggtree::geom_tippoint(color="grey50", size=2)+
+  ggtree::geom_tiplab()
+```
+
+This makes the tree and saves it in the R environment as `plot_tree`
+
+Normally, we could make this appear in the plot window in R, however using the server we will have to save and download the figure to view it.
+
+To do this, we use ggsave from the ggplot2 library:
+
+`ggplot2::ggsave("PATH_TO_DIRECTORY/tree.png", plot_tree)`
+
+Replacing `PATH_TO_DIRECTORY` with the full path to your Phylogenetic analysis directory.
+
+In the bottom right window of R, under the files tab, if you navigate to your Phylogenetic_analysis directory, you should see `tree.png` saved there. Click this to view it!
+
+___
+
+### Task 25
+
+Change the `plot_tree` command so the first line `colour = "black"` and `size = 1`, and the second line `colour = "blue"` and `size = 0.5`. Again, save and view the tree. 
+
+What do these arguments do?
+
+___
+
+### Task 25
+
+Remove the 3rd line of the tree code, and the plus, so it reads: 
+
+
+```
+plot_tree<-ggtree::ggtree(tree, colour = "grey50", ladderize = T, size = 1) +
+  ggtree::geom_tippoint(color="grey50", size=2)
+```
+
+Save and view this tree. What did this argument do? 
+
+___
+### Task 26
+
+We can also incorporate our annotations into the tree!
+
+We should still have `m` in our environment window, which details Philippines or Other for each tip.
+
+Run the following code:
+
+```
+plot_tree<-ggtree::ggtree(tree, colour = "grey50", ladderize = T, size = 1) %<+% m +
+  ggtree::geom_tippoint(color="grey50", size=2) +
+  ggtree::geom_tippoint(ggplot2::aes(color=country), size=1)
+  
+```
+
+Save and view the tree. What has this line of code done? Can you identify which tips represent sequences from the Philippines?
+
+___
+
+### Task 27
+
+Play around with the arguments you've been testing to make a tree you're happy with and save the tree.
+
+You should also save your R Script!
+
+___
