Extra tasks for automation - need testing

--- a/Phylogenetics/4.2.2_further_phylo.md
+++ b/Phylogenetics/4.2.2_further_phylo.md
@@ -16,6 +16,8 @@ In this practical you will be briefly introduced to further phylodynamic and phy
 
 For this practical we will be using premade datasets and trees from rabies virus sequences from the Cosmopolitan AF1a_C1 lineage. 
 
+You will need to use the GUI for this practical, so you'll be working in groups around the laptop that has access to this!
+
 
 ## 4.2.2.1: Tempest
 
@@ -23,35 +25,63 @@ Once you have your tree and the collection date associated with each sequence, y
 
 Tempest needs a tree and a set of dates to run.
 
-Check the metadata file `~/Phylogenetics/AF1b_C1_dates.txt` and make a note of the format the dates are written in.
+___
 
-Open tempest by typing `~/Downloads/TempEst_v1.5.3/bin/tempest` into the terminal and, when prompted, select the rabies tree in the phylogenetics folder `~/Phylogenetics/AF1b_C1_aligned.fasta.contree`. 
+### Task 1
 
-Click `import dates` and select the metadata file `~/Phylogenetics/AF1b_C1_dates.txt`.
+Using `head`, check the metadata file `/home/manager/Phylogenetics/AF1b_C1_dates.txt` and make a note of the format the dates are written in.
+
+___
+
+### Task 2
+
+Open tempest by typing `/home/manager/Downloads/TempEst_v1.5.3/bin/tempest` into the terminal and, when prompted, select the rabies tree in the phylogenetics folder `/home/manager/Phylogenetics/AF1b_C1_aligned.fasta.contree`. 
+
+___
+
+### Task 3
+
+Click `import dates` and select the metadata file `/home/manager/Phylogenetics/AF1b_C1_dates.txt`.
 
 Select `Parse as calendar date` and enter the date format you noted in the first step.
 Hint: press the question mark button next to the entry box to see how this should be written! 
+
+___
 
 You should see a list of dates appear beside the sequence IDs in Tempest. If you've parsed the dates correctly, the date for `RV2932` should be `2007.441095890411`.
 
 We can now assess the temporal signal of the data. 
 
+___
+
+### Task 4
+
 Click the `root-to-tip` tab, then select the box in the top left corner titled `best-fitting root`. Each sequence is now represented by a dot, indicating the divergence of the sequence from the root (or MRCA) over time. Sequences with more divergence than expected appear above the line, while sequences with less divergence than expected appear below the line. 
+
+___
+
+### Task 5
 
 Click the `tree` tab. You'll notice that some of the branches are coloured red and blue. If you draw a box around the tip by clicking and dragging with your mouse, you'll highlight the tip. With the sequence highlighted, click back on the `root-to-tip` tab. The sequence you selected is now highlighted here too. 
 
 Using the information here, and highlighting the sequences of interest, figure out:
 
-1. What do red branches mean?
-2. What do blue branches mean?
+  1. What do red branches mean?
+  2. What do blue branches mean?
+  
+___
+
+### Task 6
 
 Tempest can also give initial predictions of the age of the root (the time the MRCA of all the sequences occured) and the rate of evolution, in substitutions per sute per year. In the `root-to-tip` tab, try to figure out:
 
-3. When was the MRCA of these sequences predicted to have been?
-4. What is the estimate of evolutionary rate?
+  1. When was the MRCA of these sequences predicted to have been?
+  2. What is the estimate of evolutionary rate?
 
-5. Do you think this data shows good temporal signal? 
-    + Why, and what evidence backs this up?
+  3. Do you think this data shows good temporal signal? 
+      + Why, and what evidence backs this up?
+      
+___
 
 
 ## 4.2.2.2: BEAST
@@ -66,14 +96,24 @@ SPREAD is a program that helps us accomplish this. We will not be running spread
 
 SPREAD creates a `.kml` file, which we can open with Google Earth.
 
-Open Google Earth Pro (`Applications->Internet->Google Earth Pro`) and go to File->Open. Select the kml file `~/Phylogenetics/AF1b_C1.kml`. This should then open in Google Earth.
+___
+
+### Task 7
+
+Open Google Earth Pro (`Applications->Internet->Google Earth Pro`) and go to File->Open. Select the kml file `/home/manager/Phylogenetics/AF1b_C1.kml`. This should then open in Google Earth.
 
 Navigate to Tanzania, where you'll see a set of red lines. Near the top of the screen you should also see a time slider. Drag the time slider back to the start, and then press play (the little clock with the arrow). You should see a recreation of the spread of the lineage over time!
 
-6. What year is the root estimated to be?
-7. When did the lineage spread to Pemba Island?
-8. Is there any evidence of long distance transmission? 
+___
+
+### Task 8
+
+1. What year is the root estimated to be?
+2. When did the lineage spread to Pemba Island?
+3. Is there any evidence of long distance transmission? 
     + What could be explanations for this?
+    
+___
 
 
 # Summary
