--- a/Phylogenetics/4.2.3_group_practical_phylo.md
+++ b/Phylogenetics/4.2.3_group_practical_phylo.md
@@ -34,6 +34,8 @@ ___
 
 Extract the dates from the sequence IDs and make a txt file with the date for each ID, similar to what we've done before.
 
+You'll need to do the next step as a group on the GUI!
+
 Import the tree and dates into Tempest.
 Hint: The date format may be different to last time!
 
@@ -46,7 +48,7 @@ Hint: The date format may be different to last time!
 
 ___
 
-### Task 5
+### Task 4
 
 The steps we've been doing to create and visualise trees can be combined into a bash script! 
 
@@ -56,7 +58,7 @@ Can you write a bash script that aligns and creates a tree for this file? E.g. c
 
 ___
 
-### Task 6
+### Task 5
 
 We can even add R scripts into bash scripts! 
 
