Update bash R path

--- a/Phylogenetics/4.2.3_group_practical_phylo.md
+++ b/Phylogenetics/4.2.3_group_practical_phylo.md
@@ -74,10 +74,10 @@ Save the R script.
 
 Edit your bash script from before to now process the fasta file in this directory, and add to this your R script! 
 
-You can add R scripts to bash scripts by writing:
+You can add R scripts to bash scripts by writing in your bash script:
 
 ```
-Rscript PATH_TO_RSCRIPT
+/usr/lib/R/bin/Rscript PATH_TO_RSCRIPT
 ```
 
 Replacing the PATH_TO_RSCRIPT with the full path to your R Script. 
