--- a/Phylogenetics/4.2.1b_tree_building.md
+++ b/Phylogenetics/4.2.1b_tree_building.md
@@ -111,9 +111,12 @@ ___
 
 ### Task 7
 
-In the terminal write `iqtree -s omicron_subset_countries_aligned.fasta -m BEST_FITTING_MODEL -B 1000 -redo` replacing `BEST_FITTING_MODEL` with the model you found in your last step.
+In the terminal write `nohup iqtree -s omicron_subset_countries_aligned.fasta -m BEST_FITTING_MODEL -B 1000 -redo &` replacing `BEST_FITTING_MODEL` with the model you found in your last step.
 
 This command means we are building this tree with 1000 ultrafast bootstrap replicates. The `-redo` argument is necessary to overwrite the files made in the last step and allow this to run.
+
+We're using `nohup` to run this in the background, to prevent it crashing if the VM disconnects! To check the progress, we can view the `nohup.out` file produced in our directory. We'll only want to see the last few lines of this, so we ca use `tail` on this file.
+Make sure you add the `&` character at the end of the command you run with `nohup`.
 
 ___
 
