added contree to VMs

--- a/Phylogenetics/4.2.1b_tree_building.md
+++ b/Phylogenetics/4.2.1b_tree_building.md
@@ -133,6 +133,8 @@ ___
 
 ### Task 8
 
+You can find the `.contree` file in the following directory: `/home/manager/GECO_course_data/Phylogenetics/omicron_subset_countries_aligned.fasta.contree`
+
 Open figtree. 
 
 Click  File → Open → select the file `omicron_subset_countries_aligned.contree` that you just downloaded.
